[gd_scene load_steps=81 format=3 uid="uid://d0n6bs3kmy6a7"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_eutx1"]
[ext_resource type="Texture2D" uid="uid://db42rxotboupu" path="res://assets/Main Character/Crouching (32 x 32).png" id="2_0kj04"]
[ext_resource type="Texture2D" uid="uid://cfommbfix0jwn" path="res://assets/Main Character/Hurt (32 x 48).png" id="3_fg3si"]
[ext_resource type="Texture2D" uid="uid://b5uobpqrhem03" path="res://assets/Main Character/Idle (32 x 48).png" id="4_vwl25"]
[ext_resource type="Texture2D" uid="uid://cgms7d0rhbe7t" path="res://assets/Main Character/Jump (32 x 48).png" id="5_hk0e6"]
[ext_resource type="Texture2D" uid="uid://11ikj2ccymt5" path="res://assets/Main Character/Pushing 2 (32 x 48).png" id="6_fag1d"]
[ext_resource type="Texture2D" uid="uid://bmemvgjfsgtqx" path="res://assets/Main Character/Pushing Stand (32 x 48).png" id="7_huynj"]
[ext_resource type="Texture2D" uid="uid://bcaict5v62do6" path="res://assets/Main Character/Reloading_while_standing (32 x 48).png" id="8_2p35w"]
[ext_resource type="Texture2D" uid="uid://6nx4asjro62n" path="res://assets/Main Character/Running (32 x 48).png" id="8_y5fd4"]
[ext_resource type="Texture2D" uid="uid://cqcmuqxwxtbh7" path="res://assets/Main Character/swc3 (32 x 48).png" id="9_gd38j"]
[ext_resource type="Texture2D" uid="uid://c6ks35g86mlno" path="res://assets/Main Character/Shooting_while_jumping (48 x 48).png" id="10_wv7uw"]
[ext_resource type="Texture2D" uid="uid://cb72i2m2nbqft" path="res://assets/Main Character/running_medkit.png" id="11_8rov3"]
[ext_resource type="Texture2D" uid="uid://ckdk4aiq7a10i" path="res://assets/Main Character/Shooting_while_running (48 x 48).png" id="11_bgr4c"]
[ext_resource type="Texture2D" uid="uid://ch1fri1ui7txj" path="res://assets/Main Character/Shooting_while_standing (48 x 48).png" id="12_j7jlb"]
[ext_resource type="AudioStream" uid="uid://c8pgwlusnu715" path="res://sons/single shot.mp3" id="14_74qyg"]
[ext_resource type="Texture2D" uid="uid://bj7fsattdcx6t" path="res://assets/Main Character/healing.png" id="14_ym41e"]
[ext_resource type="AudioStream" uid="uid://bp8naui85g4od" path="res://sons/carregando pente.mp3" id="15_5wsck"]
[ext_resource type="AudioStream" uid="uid://bo1sps7iyi6y1" path="res://sons/tirando pente.mp3" id="16_ot4ic"]
[ext_resource type="AudioStream" uid="uid://dgy2h3s8kta2r" path="res://sons/automatic shot.mp3" id="17_yy27k"]
[ext_resource type="AudioStream" uid="uid://ci0vbqi7fcjhf" path="res://sons/footsteps.mp3" id="20_ft8dm"]
[ext_resource type="AudioStream" uid="uid://br3nnir0g22yr" path="res://sons/Footsteps Grass Sound Effect (HD).mp3" id="21_jcdkm"]
[ext_resource type="AudioStream" uid="uid://byp18rt0ceua8" path="res://sons/hurt_sound_1.mp3" id="22_6ejnl"]
[ext_resource type="AudioStream" uid="uid://bwuuscqdvf030" path="res://sons/hurt_sound_2.mp3" id="23_t8kpu"]
[ext_resource type="AudioStream" uid="uid://bmy87itsycxyx" path="res://sons/hurt_sound_3.mp3" id="24_3shml"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ie062"]
atlas = ExtResource("2_0kj04")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lejam"]
atlas = ExtResource("14_ym41e")
region = Rect2(65, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4pwr6"]
atlas = ExtResource("14_ym41e")
region = Rect2(65, 48, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nbwpe"]
atlas = ExtResource("14_ym41e")
region = Rect2(65, 96, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_em3fc"]
atlas = ExtResource("14_ym41e")
region = Rect2(65, 144, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_c6mrp"]
atlas = ExtResource("14_ym41e")
region = Rect2(65, 192, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gnhlr"]
atlas = ExtResource("14_ym41e")
region = Rect2(65, 240, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1ity"]
atlas = ExtResource("14_ym41e")
region = Rect2(65, 288, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xxjoh"]
atlas = ExtResource("14_ym41e")
region = Rect2(65, 336, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ju7jl"]
atlas = ExtResource("14_ym41e")
region = Rect2(65, 384, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_iwky8"]
atlas = ExtResource("3_fg3si")
region = Rect2(0, 8, 32, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_juu7t"]
atlas = ExtResource("4_vwl25")
region = Rect2(0, 8, 32, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_w7nrf"]
atlas = ExtResource("4_vwl25")
region = Rect2(32, 8, 32, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_0v66s"]
atlas = ExtResource("4_vwl25")
region = Rect2(64, 8, 32, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ac7mm"]
atlas = ExtResource("4_vwl25")
region = Rect2(96, 8, 32, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_tqfmn"]
atlas = ExtResource("6_fag1d")
region = Rect2(2, 8, 43, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_pyfeh"]
atlas = ExtResource("6_fag1d")
region = Rect2(45, 8, 43, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_8lmly"]
atlas = ExtResource("6_fag1d")
region = Rect2(88, 8, 43, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_mvcqi"]
atlas = ExtResource("7_huynj")
region = Rect2(0, 6, 63, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7jhj"]
atlas = ExtResource("8_2p35w")
region = Rect2(0, 8, 32, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ve35"]
atlas = ExtResource("8_2p35w")
region = Rect2(32, 8, 32, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_tt3jc"]
atlas = ExtResource("8_2p35w")
region = Rect2(64, 8, 32, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_kgoma"]
atlas = ExtResource("8_2p35w")
region = Rect2(96, 8, 32, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_mt8pg"]
atlas = ExtResource("8_2p35w")
region = Rect2(128, 8, 32, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ykcse"]
atlas = ExtResource("8_2p35w")
region = Rect2(160, 8, 32, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_hvxgg"]
atlas = ExtResource("8_2p35w")
region = Rect2(192, 8, 32, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_m1vbr"]
atlas = ExtResource("8_y5fd4")
region = Rect2(0, 8, 32, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_eks30"]
atlas = ExtResource("8_y5fd4")
region = Rect2(32, 8, 32, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_va3k8"]
atlas = ExtResource("8_y5fd4")
region = Rect2(64, 8, 32, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_5yr2f"]
atlas = ExtResource("8_y5fd4")
region = Rect2(96, 8, 32, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_4rwvs"]
atlas = ExtResource("8_y5fd4")
region = Rect2(128, 8, 32, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ocdjp"]
atlas = ExtResource("8_y5fd4")
region = Rect2(160, 8, 32, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_s3c7k"]
atlas = ExtResource("11_8rov3")
region = Rect2(0, 7, 32, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_caemc"]
atlas = ExtResource("11_8rov3")
region = Rect2(32, 7, 32, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_vjags"]
atlas = ExtResource("11_8rov3")
region = Rect2(64, 7, 32, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_ah05a"]
atlas = ExtResource("11_8rov3")
region = Rect2(96, 7, 32, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_awnfp"]
atlas = ExtResource("11_8rov3")
region = Rect2(128, 7, 32, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_gtmj8"]
atlas = ExtResource("11_8rov3")
region = Rect2(160, 7, 32, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_c3kbh"]
atlas = ExtResource("9_gd38j")
region = Rect2(0, 0, 43, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_urd07"]
atlas = ExtResource("9_gd38j")
region = Rect2(43, 0, 43, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_x50q5"]
atlas = ExtResource("9_gd38j")
region = Rect2(86, 0, 43, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6qlkn"]
atlas = ExtResource("10_wv7uw")
region = Rect2(0, 0, 48, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_r1ato"]
atlas = ExtResource("10_wv7uw")
region = Rect2(48, 0, 48, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_pqeb0"]
atlas = ExtResource("10_wv7uw")
region = Rect2(96, 0, 48, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_ggeeh"]
atlas = ExtResource("11_bgr4c")
region = Rect2(0, 8, 48, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_6jtnx"]
atlas = ExtResource("11_bgr4c")
region = Rect2(48, 8, 48, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_6drjc"]
atlas = ExtResource("11_bgr4c")
region = Rect2(96, 8, 48, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_wxywd"]
atlas = ExtResource("11_bgr4c")
region = Rect2(144, 8, 48, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_i33c3"]
atlas = ExtResource("11_bgr4c")
region = Rect2(192, 8, 48, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_og15a"]
atlas = ExtResource("11_bgr4c")
region = Rect2(240, 8, 48, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1mv0"]
atlas = ExtResource("12_j7jlb")
region = Rect2(0, 8, 48, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_3fmx7"]
atlas = ExtResource("12_j7jlb")
region = Rect2(48, 8, 48, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_cqsp5"]
atlas = ExtResource("12_j7jlb")
region = Rect2(96, 8, 48, 40)

[sub_resource type="SpriteFrames" id="SpriteFrames_7xlhi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ie062")
}],
"loop": false,
"name": &"Crouch",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lejam")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4pwr6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nbwpe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_em3fc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c6mrp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gnhlr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1ity")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gnhlr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1ity")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gnhlr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1ity")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xxjoh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ju7jl")
}],
"loop": false,
"name": &"Healing",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lejam")
}],
"loop": true,
"name": &"Healing_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iwky8")
}],
"loop": false,
"name": &"Hurt",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_juu7t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w7nrf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0v66s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ac7mm")
}],
"loop": false,
"name": &"Idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_hk0e6")
}],
"loop": false,
"name": &"Jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tqfmn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pyfeh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8lmly")
}],
"loop": false,
"name": &"Pushing",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mvcqi")
}],
"loop": false,
"name": &"Pushing_Stand",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x7jhj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ve35")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tt3jc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kgoma")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mt8pg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ykcse")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hvxgg")
}],
"loop": false,
"name": &"Reloading",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m1vbr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eks30")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_va3k8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5yr2f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4rwvs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ocdjp")
}],
"loop": false,
"name": &"Run",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s3c7k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_caemc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vjags")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ah05a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_awnfp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gtmj8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vjags")
}],
"loop": true,
"name": &"Running_medkit",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c3kbh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_urd07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x50q5")
}],
"loop": false,
"name": &"Shoot_Crouching",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6qlkn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r1ato")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pqeb0")
}],
"loop": false,
"name": &"Shoot_Jumping",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ggeeh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6jtnx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6drjc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wxywd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i33c3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_og15a")
}],
"loop": false,
"name": &"Shoot_Running",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1mv0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3fmx7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cqsp5")
}],
"loop": false,
"name": &"Shoot_Standing",
"speed": 6.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f730k"]
size = Vector2(15, 30)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_livm4"]
size = Vector2(22, 32)

[node name="Player" type="CharacterBody2D" groups=["player"]]
position = Vector2(23, 221)
collision_mask = 22
script = ExtResource("1_eutx1")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(7, -28)
sprite_frames = SubResource("SpriteFrames_7xlhi")
animation = &"Pushing_Stand"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(1, -45)
offset = Vector2(0, -20)
zoom = Vector2(4, 4)
limit_left = -100
limit_top = 50
limit_bottom = 1000
limit_smoothed = true
position_smoothing_speed = 50.0
editor_draw_limits = true

[node name="PlayerCollision" type="CollisionShape2D" parent="."]
position = Vector2(5, -24)
shape = SubResource("RectangleShape2D_f730k")

[node name="bullet_position" type="Marker2D" parent="."]
position = Vector2(18, -24)

[node name="shoot_cooldown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="hurtbox" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 84

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
position = Vector2(5, -28)
shape = SubResource("RectangleShape2D_livm4")
debug_color = Color(0.988193, 0, 0.304733, 0.42)

[node name="animation_timer" type="Timer" parent="."]
wait_time = 2.0

[node name="single_shoot" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_74qyg")
volume_db = -10.0

[node name="carregando_pente" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_5wsck")
volume_db = -30.0

[node name="tirando_pente" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_ot4ic")
volume_db = -30.0

[node name="automatic_shot" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_yy27k")

[node name="foot_steps_solid" type="AudioStreamPlayer" parent="."]
stream = ExtResource("20_ft8dm")
volume_db = -15.0
pitch_scale = 1.44

[node name="foot_steps_grass" type="AudioStreamPlayer" parent="."]
stream = ExtResource("21_jcdkm")
volume_db = -20.0

[node name="hurt_sounds" type="Node" parent="."]

[node name="hurt_sound_1" type="AudioStreamPlayer" parent="hurt_sounds"]
stream = ExtResource("22_6ejnl")
volume_db = -15.0

[node name="hurt_sound_2" type="AudioStreamPlayer" parent="hurt_sounds"]
stream = ExtResource("23_t8kpu")
volume_db = -15.0

[node name="hurt_sound_3" type="AudioStreamPlayer" parent="hurt_sounds"]
stream = ExtResource("24_3shml")
volume_db = -15.0

[node name="player_sound_hurt" type="AudioStreamPlayer" parent="hurt_sounds"]

[connection signal="body_entered" from="hurtbox" to="." method="_on_hurtbox_body_entered"]
